align graphics in table and set fixed height to prevent page jumps
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@76628 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/client.css
+++ b/Site/webapp/wdkCustomization/css/client.css
@@ -494,6 +494,10 @@ h4 {
 }
 
 
+.wdk-RecordTable__ExpressionGraphs .wdk-DataTableCell__thumbnail {
+  vertical-align: middle;
+  height: 50px;
+}
 .wdk-RecordTable__ExpressionGraphs .wdk-DataTableCell__display_name {
   min-width: 18em;
 }
